# flv-analyzer

./: Cargo.toml
corpus/: ertmp-av1-hevc-avc.flv
src/: flv_reader.rs  main.rs
