[package]
name = "flv-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = [ "derive" ] }
flavors = { version = "0.2", path = "../flavors"}
anyhow = "1.0.75"
nom = "7.1.3"